# spice_rack

./: .buildinfo  .gitignore  README.md  bases.html  fs_ops.html  genindex.html  guid_service.html  index.html  justfile  liftz.env  logging.html  objects.inv  polars_service.html  py-modindex.html  pyproject.toml  ruff.toml  search.html  searchindex.js  ts_service.html
.github/workflows/: ci-pipeline.yaml  doc-pipeline.yaml  pypi-publish.yaml
_sources/: bases.rst.txt  fs_ops.rst.txt  guid_service.rst.txt  index.rst.txt  logging.rst.txt
docs/source/: bases.rst  conf.py  fs_ops.rst  index.rst  polars_service.rst  ts_service.rst
src/liftz/: README.md  __init__.py  _constants.py  _settings.py
src/liftz/_app/: _UI.py  _app.py  _start_app.py
src/liftz/_app/_components/: _program_template.py
src/liftz/_app/_helpers/: __init__.py  _db_engine.py  _user.py
src/liftz/_app/_pages/: __init__.py  _login.py
src/liftz/_models/: __init__.py  _record_mixin.py  _strength_exercise.py  _user.py
src/liftz/_models/_common/: __init__.py  _set_info.py
src/liftz/_models/_finalized_workouts/: _session.py
src/liftz/_models/_misc/: __init__.py  _set_info.py  _system_manifest.py
src/liftz/_models/_program/: __init__.py  _program.py
src/liftz/_models/_program_execution/: __init__.py  _components.py
src/liftz/_models/_program_in_progress/: _components.py  _program.py
src/liftz/_models/_program_template/: __init__.py  _components.py  _template.py
src/liftz/_models/_run/: _program.py
src/liftz/_models/_strength_exercise/: _def.py  _key.py  _template_item.py
src/liftz/_models/_template/: __init__.py  _exercise.py  _program.py
src/liftz/_persistance/: __init__.py  _db_connect.py  _engine_builder.py  _types.py
src/liftz/_persistance/_repos/: __init__.py  _program_active.py  _program_finalized.py  _program_template.py  _record_base.py  _strength_exercise.py  _user.py
src/liftz/_persistance/_services/: __init__.py  _program_template.py  _strength_exercise.py  _user.py
src/liftz/_repos/: __init__.py  _program_active.py  _program_finalized.py  _program_template.py  _record_base.py  _strength_exercise.py  _template.py
src/liftz/_services/: __init__.py  _service_base.py  _setup_service.py
src/spice_rack/: __init__.py  _guid.py  _guid_service.py  _heap.py  _version_getter.py
src/spice_rack/_api_helpers/: __init__.py  _common_exceptions.py  _service_base.py  _uvicorn_startup.py  _uvicorn_startup_config.py
src/spice_rack/_base_classes/: __init__.py  _settings_mgmt.py
src/spice_rack/_base_classes/_enums/: __init__.py  _str_enum.py
src/spice_rack/_base_classes/_exception/: __init__.py  _error_info.py  _exception_base.py  _exception_exception.py  _http.py  _types.py
src/spice_rack/_base_classes/_pydantic/: __init__.py  _common_methods_mixin.py  _dispatchable.py  _misc.py  _mixin_base.py  _root_model.py  _value_model.py  value_model.py
src/spice_rack/_base_classes/_special_types/: __init__.py  _special_str_base.py  _special_type_mixin.py
src/spice_rack/_bases/: __init__.py  _base_base.py  _dispatchable.py  _root.py  _special_str.py  _value_model.py
src/spice_rack/_bases/_exception/: __init__.py  _error_info.py  _exception_base.py  _external_wrapper.py  _http.py
src/spice_rack/_bases/_mixins/: __init__.py  _guid_mixin.py  _mixin_base.py  _timestamped.py
src/spice_rack/_bases/_settings/: __init__.py  _base.py
src/spice_rack/_common/: __init__.py
src/spice_rack/_common/_timestamp/: __init__.py  _timestamp.py  _tz_key.py
src/spice_rack/_common_validators/: __init__.py  _mutually_exclusive_fields.py
src/spice_rack/_frozen_registry/: __init__.py  _base.py  _base_old.py
src/spice_rack/_frozen_registry/_exceptions/: __init__.py  _dupe_keys.py  _item_ix_invalid.py  _key_already_exists.py  _missing_key.py
src/spice_rack/_fs_ops/: __init__.py  _constraints.py  _exceptions.py  _file_ext.py  _file_info.py  _fs_models.py  _helpers.py  _open_modes.py  _services.py
src/spice_rack/_gcp_auth/: __init__.py  _any_auth_strat.py  _exceptions.py
src/spice_rack/_logging/: __init__.py  _log_level.py  _logger.py  _logger_getter.py  _setup.py
src/spice_rack/_misc/: __init__.py  _empty.py
src/spice_rack/_polars_service/: __init__.py  _helpers.py
src/spice_rack/_testing/: _scenarios.py
src/spice_rack/_timestamp/: __init__.py  _fields.py  _pydantic_mixins.py  _timestamp.py
src/spice_rack/_ts_service/: __init__.py  _exts.py  _fields.py  _timestamp.py  _tz_key.py  _utils.py  _validators.py
src/spice_rack/_utils/: __init__.py  _container_differ.py  _dict_flattener.py  _type_checkers.py
src/spice_rack/doc_writer/: __init__.py  _types.py
src/spice_rack/model_bases/: _common_methods_mixin.py
tests/: _config.py  conftest.py  system_manifest.yaml  test_heap.py  test_import.py  test_version_info.py
tests/base_classes/exception/: test_exception.py
tests/base_classes/pydantic/: test_dispatchable.py
tests/base_classes/special_types/: test_special_str_base.py
tests/bases/: test_dispatchable.py  test_exception.py  test_mixins.py  test_root.py  test_settings.py  test_special_str.py
tests/common/timestamp/: test_timestamp.py
tests/common_validators/: test_mutually_exclusive_fields.py
tests/frozen_registry/: test_base_ops.py  test_setup_checks.py
tests/fs_ops/: conftest.py  test_file_info.py
tests/fs_ops/file_systems/: test_gcs.py  test_local.py
tests/fs_ops/fs_models/: test_constraints.py  test_deferred.py  test_dir.py  test_extensions.py  test_file.py  test_special_files.py
tests/fs_ops/path_strs/: test_constraints.py  test_parent_ops.py
tests/gcp_auth/: conftest.py  test_anon.py  test_default.py  test_service_acct_key.py  test_service_acct_key_file.py
tests/liftz/persistence/: conftest.py  test_program_template.py  test_strength_exercises.py  test_users.py
tests/logging/: test_basic_logging.py  test_log_level.py  test_logger_out.py
tests/polars_service/types/: conftest.py  test_collected.py  test_lazy.py  test_maybe_lazy.py
tests/timestamp/: test_exts.py  test_profile_timestamp.py  test_timestamp.py  test_validators.py
(+59 files in other folders)
