[tool.poetry]
name = "spice_rack"
version = "0.0.0"   # keep as 0.0.0 placeholder for poetry-dynamic-versioning
description = "group of common things we use across different python packages"
license = "Proprietary"
authors = ["Tim Robin <timo.a.robin@gmail.com>",]
readme = "README.md"

packages = [
    {include = "spice_rack", from = "src"},
]


[tool.poetry.dependencies]
python = "~3.9"

#
# serialization and primary class base
pydantic = { version = "~1", extras = ["dotenv",] }  # noqa - we are not ready to upgrade

# helps with date parsing
dateparser = { version = "*", extras = [] }

# misc
aenum = { version = "*", extras = [] }
case-converter = { version = "*", extras = [] }
devtools = { version = "*", extras = ["pygments"] }
tabulate = { version = "*", extras = [] }

[tool.poetry.dev-dependencies]
# linter
ruff = { version = "*", extras = [] }

# mypy for static type checking
mypy = { version = "*", extras = [] }

# unit tests
pytest = { version = "*", extras = [] }
pytest-sugar = { version = "*", extras = [] }
pytest-cov = { version = "*", extras = [] }

# docs
sphinx = { version = "*", extras = [] }
sphinxcontrib-napoleon = { version = "*", extras = [] }
autodoc_pydantic = { version = "*", extras = [] }
sphinx_rtd_theme = { version = "*", extras = [] }

# jupyter lab
ipykernel = { version = "*", extras = [] }
jupyterlab = { version = "*", extras = [] }
ipywidgets = { version = "*", extras = [] }
jupyterlab_widgets = { version = "*", extras = [] }


[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
